fix image overflow in list view

--- a/src/content.css
+++ b/src/content.css
@@ -56,6 +56,7 @@
 
 .list-view-block {
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 275px;
   max-height: 275px;
 }
